[gd_scene load_steps=8 format=3 uid="uid://cod64obpin5x0"]

[ext_resource type="FontFile" uid="uid://bl6ovrue03k0f" path="res://assets/Fonts/minecraftia/Minecraftia.ttf" id="1_j6b60"]
[ext_resource type="Script" path="res://Scripts/Other/timer.gd" id="2_bqkqm"]
[ext_resource type="Script" path="res://Scripts/uis/pause_menu.gd" id="2_w0mxb"]
[ext_resource type="Shader" path="res://Resources/Blur.gdshader" id="3_0bw8f"]
[ext_resource type="PackedScene" uid="uid://4x6fafcgdalm" path="res://Scenes/Menus/Options_Menu/Options_Menu.tscn" id="4_2t1ob"]

[sub_resource type="LabelSettings" id="LabelSettings_oakvf"]
font = ExtResource("1_j6b60")
font_size = 56
font_color = Color(0.564618, 0.667501, 0.930408, 1)
outline_size = 6
outline_color = Color(0.00819378, 0.235508, 1, 1)
shadow_size = 16
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(1, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1q3h8"]
shader = ExtResource("3_0bw8f")
shader_parameter/lod = 0.5

[node name="UI" type="CanvasLayer"]
process_mode = 1

[node name="Main_UI" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Control" type="Control" parent="Main_UI"]
layout_mode = 2

[node name="Label" type="Label" parent="Main_UI/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -512.0
offset_right = 512.0
offset_bottom = 84.0
grow_horizontal = 2
text = "Game"
label_settings = SubResource("LabelSettings_oakvf")
horizontal_alignment = 1

[node name="Overlays" type="Control" parent="Main_UI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Label" parent="Main_UI/Control/Overlays"]
custom_minimum_size = Vector2(134, 32)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -134.0
offset_bottom = 32.0
grow_horizontal = 0
size_flags_vertical = 1
text = "00:00:00.000"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_bqkqm")

[node name="Panel" type="Panel" parent="Main_UI/Control/Overlays/Timer"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pause_Menu" type="ColorRect" parent="."]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0.196078)
script = ExtResource("2_w0mxb")

[node name="ColorRect" type="ColorRect" parent="Pause_Menu"]
material = SubResource("ShaderMaterial_1q3h8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Menu" type="PanelContainer" parent="Pause_Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -139.0
offset_right = 150.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Pause_Menu/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="Pause_Menu/Menu/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = -66.0
grow_horizontal = 2
text = "Paused
"
label_settings = SubResource("LabelSettings_oakvf")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Pause_Menu/Menu"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Pause_Menu/Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Resume" type="Button" parent="Pause_Menu/Menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_j6b60")
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="Options" type="Button" parent="Pause_Menu/Menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_j6b60")
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="Save" type="Button" parent="Pause_Menu/Menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_j6b60")
theme_override_font_sizes/font_size = 24
text = "Save"

[node name="Exit" type="Button" parent="Pause_Menu/Menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_j6b60")
theme_override_font_sizes/font_size = 24
text = "Exit"

[node name="Options_Menu" parent="Pause_Menu" instance=ExtResource("4_2t1ob")]
visible = false
layout_mode = 1

[node name="Timer" type="Timer" parent="Pause_Menu"]

[connection signal="pressed" from="Pause_Menu/Menu/MarginContainer/VBoxContainer/Resume" to="Pause_Menu" method="_on_resume_pressed"]
[connection signal="pressed" from="Pause_Menu/Menu/MarginContainer/VBoxContainer/Options" to="Pause_Menu" method="_on_options_pressed"]
[connection signal="pressed" from="Pause_Menu/Menu/MarginContainer/VBoxContainer/Save" to="Pause_Menu" method="_on_save_pressed"]
[connection signal="pressed" from="Pause_Menu/Menu/MarginContainer/VBoxContainer/Exit" to="Pause_Menu" method="_on_exit_pressed"]
